[package]
name = "vulkano-jitter-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano.git" }
winit = "0.27"
bytemuck = "1.7"
